# concurrent_deferred_rc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_and_run_test.sh  seg_fault.sh  sticky.sh  test.sh  testweak.sh
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt  README.md  barrier.hpp  bench_queue.cpp  bench_ref_count.cpp  bench_stack.cpp  common.hpp  measurement.h
benchmarks/datastructures/: queue.h  stack.h
benchmarks/memory_reclamation/: .gitignore  Makefile  README.md  create_graphs.py  run_experiments.py  test_memory_reclamation.sh
benchmarks/memory_reclamation/ext/parharness/: BlockPool.hpp  ConcurrentPrimitives.hpp  DefaultHarnessTests.cpp  DefaultHarnessTests.hpp  Harness.cpp  Harness.hpp  HarnessUtils.cpp  HarnessUtils.hpp  LICENSE.txt  Makefile  Makefile.32  ParallelLaunch.cpp  ParallelLaunch.hpp  RAllocator.hpp  RContainer.hpp  README.txt  RMap.hpp  Recorder.cpp  Recorder.hpp  Rideable.hpp  SGLQueue.cpp  SGLQueue.hpp  TODO.txt  TestConfig.cpp  TestConfig.hpp  gccLeaks.supp  license-header.txt  license.sh  parharness
benchmarks/memory_reclamation/ext/parharness/affinity/: even_odds_lo_hi.aff  node2x18a.cs.rochester.edu.aff  single.aff  ubuntu.aff
benchmarks/memory_reclamation/ext/parharness/scripts/: bonsai_intr_RCU.csv  charting-example.R  metacmd.py  repeat.py  testscript_wfe.py
benchmarks/memory_reclamation/src/: CustomTests.cpp  CustomTests.hpp  ROrderedMap.hpp  RUnorderedMap.hpp  RetiredMonitorable.hpp  main.cpp  optional.hpp
benchmarks/memory_reclamation/src/rideables/: HashMap.hpp  HashMapRC.hpp  HashMapRCSS.hpp  LinkList.hpp  LinkListRC.hpp  LinkListRCSS.hpp  NatarajanTree.hpp  NatarajanTreeRC.hpp  NatarajanTreeRCSS.hpp  SortedUnorderedMap.hpp  SortedUnorderedMapRC.hpp  SortedUnorderedMapRCSS.hpp
benchmarks/memory_reclamation/src/trackers/: BaseTracker.hpp  DEBRATracker.hpp  HETracker.hpp  HETrackerOriginal.hpp  HazardOptTracker.hpp  HazardTracker.hpp  HyalineTracker.hpp  MemoryTracker.hpp  OurRangeTracker.hpp  RCUSharedTracker.hpp  RCUTracker.hpp  README.md  RangeTrackerNew.hpp  WFETracker.hpp  dcas.hpp
cmake/: CdrcConfig.cmake.in  danalysis.cmake
examples/: linked_list.h  stack.h
include/cdrc/: atomic_rc_ptr.h  atomic_weak_ptr.h  marked_arc_ptr.h  rc_ptr.h  snapshot_ptr.h  weak_ptr.h  weak_snapshot_ptr.h
include/cdrc/internal/: acquire_retire.h  counted_object.h  epoch_tracker.h  fwd_decl.h  memory_manager_base.h  utils.h  utils.hpp
include/cdrc/internal/smr/: acquire_retire.h  acquire_retire_ebr.h  acquire_retire_hyaline.h  acquire_retire_ibr.h
results/: CMakeLists.txt  plot_graphs.py
test/: CMakeLists.txt  test_benchmark_queue.cpp  test_benchmark_stack.cpp  test_bug.cpp  test_example_linked_list.cpp  test_example_stack.cpp  test_folly.cpp  test_hazptr_stack.cpp  test_jss_arc.cpp  test_marked_ptrs.cpp  test_rc_ridables.cpp  test_rcu_stack.cpp  test_sticky_counter.cpp  test_weak_ptr_leak.cpp  test_weak_ptr_mini.cpp  test_weak_ptrs.cpp
tests/: CMakeLists.txt  test_benchmark_queue.cpp  test_benchmark_stack.cpp  test_example_linked_list.cpp  test_example_stack.cpp  test_hazptr_stack.cpp  test_jss_free.cpp  test_marked_ptrs.cpp  test_queue.cpp  test_rc_ridables.cpp  test_stack.cpp
